# tidy-nb

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: Untitled.ipynb  vectors.ipynb
examples/marimo/: untitled.py  vectors.py
src/: jupyter_to_marimo.py  marimo_to_jupyter.py
src/tidy_nb/: __init__.py  __main__.py  cli.py
tests/: test_basic.py
